refactored to sector52 template

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,14 +7,14 @@ minecraft_version_range=[1.20.1,1.21)
 forge_version=47.2.19
 forge_version_range=[47,)
 loader_version_range=[47,)
-mapping_channel=official
-mapping_version=1.20.1
+mapping_channel=parchment
+mapping_version=2023.09.03-1.20.1
 
 ## Mod Properties
-mod_id=examplemod
-mod_name=Example Mod
+mod_id=sector52
+mod_name=Sector52
 mod_license=All Rights Reserved
-mod_version=1.0.0
-mod_group_id=com.example.examplemod
-mod_authors=YourNameHere, OtherNameHere
-mod_description=Example mod description.\nNewline characters can be used and will be replaced properly.
+mod_version=1.20.1-forge-1.0.0
+mod_group_id=net.silicon.sector52
+mod_authors=Silicon, Jason13
+mod_description=A mod for Minecraft based on the Transformers franchise.
