--- a/build.gradle
+++ b/build.gradle
@@ -127,7 +127,7 @@ repositories {
 dependencies {
     minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
 
-    implementation fg.deobf()
+    implementation fg.deobf('software.bernie.geckolib:geckolib-forge-1.20.4:4.4.1')
     }
 
 // This block of code expands all declared replace properties in the specified resource targets.
